- Old clients no more works with new server(3.0.7)

...

28/03/2001
- Telepath Class, uses crystals, can fusion with otehr people
- Grond inscribed with !E wont earthquake
- Mage Staffs of Power wont increase casting speed
- Grond WILL increase casting speed by 4
- DragonRiders get a ESP radius of (lvl/2)
- DragonRiders lost resist poison
- DragonRiders resistancess comes at lvl 10 15 20 25

01/04/2001
- Telepaths can now cast their spells with their energy instead of the
  controlled guy energy
- Telepaths got 3 new Telekinesis spells
- Mind links needs 20 + d15 turns to be ended
- Telepaths got 1 new Psychoportation spell

16/04/2001
- Fixed a bug in the polymorph ring generation that could hang the game
- Mimics polymorph will cycle throught the possible forms instead of
  randomly selecting them

...

24/07/2001 (evileye)
- Fixed a bug in server (common/types.h) which has player_type.dun_depth as s16b,
  but uses pointer to s32b in load/save routines. Likewise with object_type.
  This does not manifest in some machines.
- Fixed lack of null termination in self knowledge and *identification*.
- Fixed the "psi-powers" bug with rods.
- Fixed wand bug which could reduce the pval of other items.
- tot_dam_aux_player was getting resistances the wrong way round (and redefining
  arg p_ptr).
- uncommented 744/745 of server/xtra1.c
- made king code multi-king friendly (made movement hook for each player)

25/07/2001 (evileye)
- Fixed up target_set_friendly so that it works with non party players
  and respects hostilities.
- Fixed "the (nothing) you are wearing is cursed" problem which annoys
  recently deceased players.
- Blood bond should not crash now.
- Added curse item spell for rogues (not fully implemented).
- Cleaned up various code and added protos for some funcs

25/07/2001 (darkgod)
- Furry, Dig, Spin warrior technics
- Fixed DSM being dopepd without unpolying
- Fixed morphing and not lossing eq wit eq is inscribed !