@@ -32,4 +32,13 @@
 [Initializing arrays... done]
 Please wait...
 Object flavors initialized...
-Warning: Next signal kills server!
+Couldn't send info to meta-server!
+Server is running version 3140
+Couldn't send info to meta-server!
+26 Jul 18:48:43: Welcome DarkGod=rich@theforest.demon.co.uk (0.0.0.0/0)
+26 Jul 18:48:54: Welcome Evileye=root@theforest.demon.co.uk (0.0.0.0/0)
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+26 Jul 18:49:08: Goodbye Evileye=root@theforest.demon.co.uk ("Killed by divine wrath")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
