@@ -2074,7 +2074,8 @@ void cmd_master_aux_summon(void)
 		Term_putstr(5, 7, -1, TERM_WHITE, "(4) Depth");
 		Term_putstr(5, 8, -1, TERM_WHITE, "(5) Specific");
 		Term_putstr(5, 9, -1, TERM_WHITE, "(6) Mass Genocide");
-		Term_putstr(5, 10, -1, TERM_WHITE, "(7) Summoning mode off");
+		Term_putstr(5, 10, -1, TERM_WHITE, "(7) Level *Genocide*");
+		Term_putstr(5, 11, -1, TERM_WHITE, "(8) Summoning mode off");
 
 
 
@@ -2146,7 +2147,7 @@ void cmd_master_aux_summon(void)
 			{
 				buf[2] = 's';
 				buf[3] = 0;
-				get_string("Summon which mosnter or character? ", &buf[3], 79);
+				get_string("Summon which monster or character? ", &buf[3], 79);
 				if (!buf[3]) redo_hack = 1;
 				break;
 			}
@@ -2163,9 +2164,19 @@ void cmd_master_aux_summon(void)
 
 				redo_hack = 1;
 				break;
-			}	
+			}
 
 			case '7':
+				/* Mass mass genocide. Clear a level */
+				/* Only does town & dungeon ATM */
+				buf[0] = 'Q';
+				buf[1] = c_get_quantity("What depth?", 127);
+				buf[2] = '\0';
+				Send_master(MASTER_SUMMON, buf);
+				redo_hack = 1;
+				break;
+
+			case '8':
 			{
 				/* disable summoning mode */
 				buf[0] = 'F';
@@ -2268,12 +2279,50 @@ void cmd_master_aux_summon(void)
 	}
 }
 
+void cmd_master_aux_player(){
+	char i=0;
+	char buf[80];
+	Term_clear();
+	Term_putstr(0, 2, -1, TERM_BLUE, "Player commands");
+	Term_putstr(5, 4, -1, TERM_WHITE, "(1) Editor (offline)");
+	Term_putstr(5, 5, -1, TERM_WHITE, "(2) Acquirement");
+	Term_putstr(5, 6, -1, TERM_WHITE, "(3) Invoke wrath");
+	
+	Term_putstr(0, 10, -1, TERM_WHITE, "Command: ");
 
+	while(i!=ESCAPE){
+		/* Get a key */
+		i = inkey();
+		buf[0]='\0';
+		switch(i){
+			case '1':
+				buf[0]='E';
+				get_string("Enter player name:",&buf[1],15);
+				break;
+			case '2':
+				buf[0]='A';
+				get_string("Enter player name:",&buf[1],15);
+				break;
+			case '3':
+				buf[0]='k';
+				get_string("Enter player name:",&buf[1],15);
+				break;
+			case ESCAPE:
+				break;
+			default:
+				bell();
+		}
+		if (buf[0]) Send_master(MASTER_PLAYER, buf);
+
+		/* Flush messages */
+		c_msg_print(NULL);
+	}
+}
 
 /* Dungeon Master commands */
 void cmd_master(void)
 {
-	char i;
+	char i=0;
 	char buf[80];
 
 	/* Screen is icky */
@@ -2285,7 +2334,7 @@ void cmd_master(void)
 	Term_save();
 
 	/* Process requests until done */
-	while (1)
+	while (i!='\e')
 	{
 		/* Clear screen */
 		Term_clear();
@@ -2301,6 +2350,7 @@ void cmd_master(void)
 		Term_putstr(5, 5, -1, TERM_WHITE, "(2) Building Commands");
 		Term_putstr(5, 6, -1, TERM_WHITE, "(3) Summoning Commands");
 		Term_putstr(5, 7, -1, TERM_WHITE, "(4) Generation Commands");
+		Term_putstr(5, 8, -1, TERM_WHITE, "(5) Player Commands");
 
 		/* Prompt */
 		Term_putstr(0, 11, -1, TERM_WHITE, "Command: ");
@@ -2308,40 +2358,28 @@ void cmd_master(void)
 		/* Get a key */
 		i = inkey();
 
-		/* Leave */
-		if (i == ESCAPE) break;
-
-		/* Level commands */
-		else if (i == '1')
-		{
-			cmd_master_aux_level();
-		}
-
-		/* Build commands */
-		else if (i == '2')
-		{
-			cmd_master_aux_build();
-		}
-
-		/* Summon commands */
-		else if (i == '3')
-		{
-			cmd_master_aux_summon();
+		switch(i){
+			case '1':
+				cmd_master_aux_level();
+				break;
+			case '2':
+				cmd_master_aux_build();
+				break;
+			case '3':
+				cmd_master_aux_summon();
+				break;
+			case '4':
+				cmd_master_aux_generate();
+				break;
+			case '5':
+				cmd_master_aux_player();
+				break;
+			case ESCAPE:
+				break;
+			default:
+				bell();
 		}
 		
-		/* Generate commands */
-		else if (i == '4')
-		{
-			cmd_master_aux_generate();
-		}
-
-		/* Oops */
-		else
-		{
-			/* Ring bell */
-			bell();
-		}
-
 		/* Flush messages */
 		c_msg_print(NULL);
 	}
