@@ -300,6 +300,7 @@
 #define MASTER_BUILD	2
 #define	MASTER_SUMMON	3
 #define MASTER_GENERATE	4
+#define MASTER_PLAYER	5
 
 #define	MASTER_SUMMON_SPEFIC	0	
 #define	MASTER_SUMMON_
